# hruid-python

./: .gitignore  .travis.yml  README.md  example.py  pyproject.toml  scripts.py
hruid/: __init__.py  __main__.py  adjectives.py  adverbs.py  cli.py  hruid.py  nouns.py  verbs.py
tests/: test_wordlists.py
